k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: k8s-demo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        namespace: k8s-demo
    spec:
      containers:
        - name: backend
          image: kaprele/k8s-demo-backend:latest
          imagePullPolicy: Never # only for skaffold
          ports:
            - containerPort: 3001
