k8s/backend-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
  namespace: k8s-demo
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
